fix issue h2 hidden by navbar

--- a/src/styles/home/index_small.css
+++ b/src/styles/home/index_small.css
@@ -228,7 +228,7 @@ header img, .contact-cell img {
 
 #about h2 {
     margin-top: 0;
-    padding: 3.5rem 2rem 0;
+    padding: 6.5rem 2rem 0;
 }
 
 #about p {
